[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
tokio = "1.14.0"
log = "0.4.14"
simple_logger = "1.15.0"
serde = "1.0.131"
serde_json = "1.0.72"
aws-config = "0.2.0"
aws-types = "0.2.0"
aws-sdk-dynamodb = "0.2.0"
